--- a/style/screen.css
+++ b/style/screen.css
@@ -1,6 +1,3 @@
-/* The Doghouse NYC */
-
-
 /*general stuff*/
 
 * {margin: 0; padding: 0; border: 0;}
@@ -8,23 +5,27 @@
 body {
 	font: 12px/17px Georgia, serif;
 	color: #000;
-	background: #111;
+	background: #888;
 }
 
-body#popup {background: #fff;}
- 
-.hide {
-	display: none;
- }
+
 
 /*typography and images*/
 
-
+h1 {
+	font-weight: normal;
+	font-size: 20px;
+	line-height: 20px;
+	padding: 10px 0 5px 0;
+	color: #555;
+	/*border-bottom: 1px solid #000;*/
+}
+/*
 h1 {
 	text-indent: 0px;
 	height: 100px;
 	background: #fff url(../images/header.gif) no-repeat top left;
-}
+}*/
 
 h1 a:link, h1 a:visited {
 	display: block;
@@ -75,27 +76,7 @@ p.last {
 	text-indent: 0;
 }
 
-#main .floatingleft {
-	float: left;
-margin-top:4px;
-margin-right:6px;
-margin-bottom:0px;
-clear: both;
-}
 
-
-#main .pic {
-	width: 305px;
-	padding: 10px;
-	margin: 10px;
-	display: block;
-	border: 1px solid #333;
-}
-
-
-#header {
-margin: 0px 20 0 0;
-}
 
 /*layout*/
 #frame {
